<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello GmarketQuickMenu!</string>
    <string name="app_name">GmarketQuickMenu</string>
    <string name="btn_start">Start</string>
    <string name="btn_end">End</string>
    <string name="btn_attendance">출석</string>
    <string name="btn_best">베스트</string>
    <string name="btn_cart">장바구니</string>
    <string name="btn_ecoupon">e쿠폰</string>
    <string name="btn_event">이벤트</string>
    <string name="btn_favorite">관심상품</string>
    <string name="btn_home">홈메인</string>
    <string name="btn_order">주문</string>
    <string name="btn_search">검색</string>
    <string name="start_app">Starting application:</string>
    <string name="center_click">Center has been clicked</string>
    <string name="title_activity_search_keyword_input">SearchKeywordInputActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>